# alamo-Onboard

./: .dockerignore  .env.example  .gitignore  CONTRIBUTIONS.md  Dockerfile  Makefile  README.md  THINGS TO ADD TO APP FOR NLP PROJECT.txt  config.py  docker-compose.yml  integration_test.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  smoke_test.py
data/: form_schemas.json
docs/: DATA.md  LOGGING.md  MODELS.md  MODEL_CARD.md  REPRODUCE.md  SPEC.md  SPEC_OLD_REMOVE.md  STORIES.md  benchmarks.md  usage.md
docs/diagrams/: architecture_source.md
grading/: grade.py  manifest.yaml  traceability.yaml
reports/: .gitkeep  edge.xml  git_contributions.txt  regenerated_user_stories.xml  regeneration.md  walkthrough.md
sa_utilities/: config.py  models.py
sa_utilities/adapters/: cosa.py  cps.py  saws.py
sa_utilities/pipeline/: check_headers.py  chunker.py  embedder.py  fingerprinter.py  retriever.py  runner.py
sa_utilities/tests/: test_pipeline.py
scripts/: build_index.py  demo.sh  preflight.sh  regenerate.sh  regenerate_prompt.md
src/agent/: llm_client.py  orchestrator.py  prompts.py  tools.py
src/checklist/: tracker.py
src/forms/: __init__.py  prefill.py  schemas.py  validators.py  workflow.py
src/indexer/: embedder.py  loaders.py  retriever.py  vector_store.py
src/myproject/: __init__.py
src/myproject/agent/: __init__.py  orchestrator.py
src/myproject/checklist/: __init__.py  tracker.py
src/myproject/forms/: __init__.py  schemas.py  validators.py  workflow.py
src/myproject/indexer/: __init__.py  retriever.py
src/ui/: gradio_app.py
src/utils/: logging_utils.py
tests/: conftest.py
tests/edge/: test_edge_cases.py
tests/integration/: test_e2e.py
tests/load/: locustfile.py
tests/unit/: test_indexer.py  test_llm_client.py  test_logging_utils.py  test_orchestrator.py  test_prefill.py  test_sa_utilities_models.py  test_tools_extra.py  test_tracker.py  test_validators.py  test_workflow.py
tests/user_stories/: test_user_stories.py
