[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "alamoonboard"
version = "1.0.0"
description = "San Antonio utilities and city-services onboarding assistant"
requires-python = ">=3.11"

# ---------------------------------------------------------------
# Ruff (linter + import sorter)
# ---------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "sa_utilities", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (black handles this)
    "B008",  # do not perform function calls in default arguments
    "UP007", # use X | Y for type hints (want to keep Optional for Python 3.11 compat)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]   # allow assert in tests

# ---------------------------------------------------------------
# Black (formatter)
# ---------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311"]

# ---------------------------------------------------------------
# Mypy (type checker)
# ---------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = ["gradio.*", "faiss.*", "rank_bm25.*", "chromadb.*", "sentence_transformers.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "user_story: mark a test as a user story acceptance test",
    "edge: mark a test as an edge-case test",
    "load: mark a test as a load/stress test",
]
addopts = [
    "--tb=short",
    "-q",
]

# ---------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------
[tool.coverage.run]
source = ["src", "sa_utilities"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "src/ui/gradio_app.py",
    "src/indexer/loaders.py",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
